--- a/bower.json
+++ b/bower.json
@@ -21,5 +21,8 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "namespacejs": "namespacejs.js#~0.2.3"
+  }
 }
